part3/8/services/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-example
  ports:
  - protocol: TCP
    port: 8000
