part3/8/services/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db-postgres
  ports:
  - protocol: TCP
    port: 5432
