part3/8/services/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-example
  ports:
  - protocol: TCP
    port: 5000
